separting the map styling from the body styling in the media querry

--- a/client/style/map.css
+++ b/client/style/map.css
@@ -18,14 +18,12 @@ main {
 @media only screen and (max-device-width: 780px) {
     body {
     
-    height: calc(100vh - 120px);
+    height: calc(100vh - 100px);
     width: 100%;
     overflow: hidden;
-    background-size: auto;
 
     }
-
-    main {
+    #discoverablemap {
         height: 100%;
         width: 100%;
     }
