--- a/client/style/map.css
+++ b/client/style/map.css
@@ -1,6 +1,7 @@
 #discoverablemap {
     height: 100%;
     width: 100%;
+    border: 1px solid black;
 }
 
 body {
@@ -26,5 +27,6 @@ main {
     #discoverablemap {
         height: 100%;
         width: 100%;
+        border: 1px solid black;
     }
 }
