--- a/client/style/shoppingbasket.css
+++ b/client/style/shoppingbasket.css
@@ -21,7 +21,7 @@ article {
     height: 90px;
     font-weight: bold;
     background-color: #007936;
-    border: 1px solid var(--primary-color);
+    border: 1px solid black;
     padding: 10px 5px 0 5px;
     color: white;
     border-radius: 25px;
